syntax = "proto3";
option java_package = "ma.projet.grpc.stubs";
option java_multiple_files = true;

enum TypeCompte {
  COURANT = 0;
  EPARGNE = 1;
}

message Compte {
  string id = 1;
  float solde = 2;
  string dateCreation = 3;
  TypeCompte type = 4;
}

message CompteRequest {
  float solde = 1;
  string dateCreation = 2;
  TypeCompte type = 3;
}

message SoldeStats {
  int32 count = 1;
  float sum = 2;
  float average = 3;
}

message GetAllComptesRequest {}

message GetAllComptesResponse {
  repeated Compte comptes = 1;
}

message GetCompteByIdRequest {
  string id = 1;
}

message GetCompteByIdResponse {
  Compte compte = 1;
}

message GetTotalSoldeRequest {}

message GetTotalSoldeResponse {
  SoldeStats stats = 1;
}

message SaveCompteRequest {
  CompteRequest compte = 1;
}

message SaveCompteResponse {
  Compte compte = 1;
}

message FindByTypeRequest {
  TypeCompte type = 1;
}

message FindByTypeResponse {
  repeated Compte comptes = 1;
}

message DeleteCompteRequest {
  string id = 1;
}

message DeleteCompteResponse {
  bool success = 1;
}

service CompteService {
  rpc AllComptes(GetAllComptesRequest) returns (GetAllComptesResponse);
  rpc CompteById(GetCompteByIdRequest) returns (GetCompteByIdResponse);
  rpc TotalSolde(GetTotalSoldeRequest) returns (GetTotalSoldeResponse);
  rpc SaveCompte(SaveCompteRequest) returns (SaveCompteResponse);
  rpc FindByType(FindByTypeRequest) returns (FindByTypeResponse);
  rpc DeleteCompte(DeleteCompteRequest) returns (DeleteCompteResponse);
}